<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Word</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">This is a sample word document!</string>
    <string name="file">FILE</string>
    <string name="home">HOME</string>
    <string name="insert">INSERT</string>
    <string name="layout">LAYOUT</string>
    <string name="review">REVIEW</string>
    <string name="view">VIEW</string>
    <string name="bold">B</string>
    <string name="italic">I</string>
    <string name="underline">U</string>
    <string name="filename">Document(1).docx</string>
    <string name="share">Share</string>
    <string name="undo">Undo</string>
    <string name="readmode">Read</string>
    <string name="no_text"></string>
    <string name="table">Table</string>
    <string name="picture">Picture</string>
    <string name="shapes">Shapes</string>
    <string name="smartart">SmartArt</string>
    <string name="chart">Chart</string>
    <string name="font">FONT</string>
    <string name="paragraph">PARAGRAPH</string>
    <string name="styles">STYLES</string>
    <string name="find">FIND</string>
    <string name="tables">TABLES</string>
    <string name="illustrations">ILLUSTRATIONS</string>
    <string name="links">LINKS</string>
    <string name="comments">COMM..</string>
    <string name="text">TEXT</string>
    <string name="footnotes">FOOTNOTES</string>
    <string name="proofing">PROOFING</string>
    <string name="comments_review">COMMENTS</string>
    <string name="changes">CHANGES</string>
    <string name="showchanges">Show Changes</string>
    <string name="views">VIEWS</string>
    <string name="zoom">ZOOM</string>
    <string name="ribbon">RIBBON</string>
    <string name="zoomto200">200%</string>
    <string name="pagesetup">PAGE SETUP</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    
    <string-array name="spinner_fontface">
        <item>Calibri</item>
        <item>Cambria</item>
        <item>Courier</item>
        <item>Georgia</item>
        <item>Gill Sans</item>
        <item>Verdana</item>
    </string-array>
    <string-array name="spinner_fontsize">
        <item>11</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>24</item>
        <item>36</item>
        <item>72</item>
    </string-array>
    <string-array name="spinner_textstyles">
        <item>Heading1</item>
        <item>Heading2</item>
        <item>Heading3</item>
        <item>Heading4</item>
    </string-array>

</resources>
