<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
	
    <LinearLayout
        	android:id="@+id/insert_ribbon"
        	android:layout_height="wrap_content"
        	android:layout_width="fill_parent"
        	android:layout_marginTop="10dp">
        
        <ImageButton 
            android:id="@+id/button_table"
            android:layout_width="50dp"
    		android:layout_height="50dp"
    		android:src="@drawable/table"
    		style="?android:attr/borderlessButtonStyle"/>
        <ImageButton 
            android:id="@+id/button_picture"
            android:layout_width="50dp"
    		android:layout_height="50dp"
    		android:src="@drawable/picture"
    		style="?android:attr/borderlessButtonStyle"/>
        <ImageButton 
            android:id="@+id/button_shape"
            android:layout_width="50dp"
    		android:layout_height="50dp"
    		android:src="@drawable/shape"
    		style="?android:attr/borderlessButtonStyle"/>
        <ImageButton 
            android:id="@+id/button_smartart"
            android:layout_width="50dp"
    		android:layout_height="50dp"
    		android:src="@drawable/smartart"
    		style="?android:attr/borderlessButtonStyle"/>
        <ImageButton 
            android:id="@+id/button_chart"
            android:layout_width="50dp"
    		android:layout_height="50dp"
    		android:src="@drawable/chart"
    		style="?android:attr/borderlessButtonStyle"/>
        <ImageButton 
            android:id="@+id/button_link"
            android:layout_width="50dp"
    		android:layout_height="50dp"
    		android:src="@drawable/link"
    		style="?android:attr/borderlessButtonStyle"/>
        <ImageButton 
            android:id="@+id/button_newcomment"
            android:layout_width="50dp"
    		android:layout_height="50dp"
    		android:src="@drawable/newcomment"
    		style="?android:attr/borderlessButtonStyle"/>
        <ImageButton 
            android:id="@+id/button_textbox"
            android:layout_width="50dp"
    		android:layout_height="50dp"
    		android:src="@drawable/textbox"
    		style="?android:attr/borderlessButtonStyle"/>
        <ImageButton 
            android:id="@+id/button_headerfooter"
            android:layout_width="50dp"
    		android:layout_height="50dp"
    		android:src="@drawable/headerfooter"
    		style="?android:attr/borderlessButtonStyle"/>
        <ImageButton 
            android:id="@+id/button_pagenumber"
            android:layout_width="50dp"
    		android:layout_height="50dp"
    		android:src="@drawable/pagenumber"
    		style="?android:attr/borderlessButtonStyle"/>
        <ImageButton 
            android:id="@+id/button_footnote"
            android:layout_width="50dp"
    		android:layout_height="50dp"
    		android:src="@drawable/footnote_overflow"
    		style="?android:attr/borderlessButtonStyle"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/insert_ribbon_lines"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <View
            android:layout_marginLeft="10dp"
		    android:layout_width="40dp"
		    android:layout_height="1dip"
		    android:background="#111111"
		    android:layout_marginRight="15dp" />
        <View 
            android:layout_width="180dp"
            android:layout_height="1dip"
            android:background="#000000"
            android:layout_marginRight="15dp"/>
        <View 
            android:layout_width="40dp"
            android:layout_height="1dip"
            android:background="#000000"
            android:layout_marginRight="15dp"/>
        <View 
            android:layout_width="40dp"
            android:layout_height="1dip"
            android:background="#000000"
            android:layout_marginRight="15dp"/>
        <View 
            android:layout_width="135dp"
            android:layout_height="1dip"
            android:background="#000000"
            android:layout_marginRight="15dp"/>
        <View 
            android:layout_width="70dp"
            android:layout_height="1dip"
            android:background="#000000"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/insert_ribbon_categories"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    
        <TextView 
            android:text="@string/tables"
            android:textSize="12sp"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"/>
        <TextView 
            android:text="@string/illustrations"
            android:textSize="12sp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"/>
        <TextView 
            android:text="@string/links"
            android:textSize="12sp"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"/>
        <TextView 
            android:text="@string/comments"
            android:textSize="12sp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"/>
        <TextView 
            android:text="@string/text"
            android:textSize="12sp"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"/>
        <TextView 
            android:text="@string/footnotes"
            android:textSize="12sp"
            android:layout_width="70dp"
            android:layout_height="wrap_content"/>
 
    </LinearLayout>


</LinearLayout>
